--- a/PurgarNET.AAConnector/PurgarNET.AAClient.TestApp/PurgarNET.AAConnector.TestApp.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAClient.TestApp/PurgarNET.AAConnector.TestApp.csproj
@@ -100,9 +100,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PurgarNET.AAConnector.Client\PurgarNET.AAConnector.Client.csproj">
+    <ProjectReference Include="..\PurgarNET.AAConnector.Client\PurgarNET.AAConnector.Shared.csproj">
       <Project>{c023ea8d-d9ec-4a7e-a877-def4b9ed345c}</Project>
-      <Name>PurgarNET.AAConnector.Client</Name>
+      <Name>PurgarNET.AAConnector.Shared</Name>
     </ProjectReference>
     <ProjectReference Include="..\PurgarNET.AAConnector.ConsoleControls\PurgarNET.AAConnector.Console.csproj">
       <Project>{949202f5-f792-4bc2-ba98-baf20fd1bbd0}</Project>
