--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Client/PurgarNET.AAConnector.Shared.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Client/PurgarNET.AAConnector.Shared.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C023EA8D-D9EC-4A7E-A877-DEF4B9ED345C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PurgarNET.AAConnector.Client</RootNamespace>
-    <AssemblyName>PurgarNET.AAConnector.Client</AssemblyName>
+    <RootNamespace>PurgarNET.AAConnector.Shared</RootNamespace>
+    <AssemblyName>PurgarNET.AAConnector.Shared</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -52,20 +52,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AAAccountClientBase.cs" />
-    <Compile Include="AAClientBase.cs" />
-    <Compile Include="AAUserClientBase.cs" />
-    <Compile Include="AAWorkflowClient.cs" />
-    <Compile Include="AAConfigClient.cs" />
-    <Compile Include="ApiException.cs" />
-    <Compile Include="AuthorizationManager.cs" />
-    <Compile Include="GraphClient.cs" />
-    <Compile Include="Models\ApiError.cs" />
-    <Compile Include="Models\ApiResponse.cs" />
-    <Compile Include="Models\AutomationAccount.cs" />
-    <Compile Include="Models\Subscription.cs" />
-    <Compile Include="Models\Tenant.cs" />
-    <Compile Include="Models\Token.cs" />
+    <Compile Include="AutomationClient\Models\Runbook.cs" />
+    <Compile Include="AutomationClient\AAClientBase.cs" />
+    <Compile Include="AutomationClient\AAUserClient.cs" />
+    <Compile Include="AutomationClient\AAWorkflowClient.cs" />
+    <Compile Include="AutomationClient\ApiException.cs" />
+    <Compile Include="AutomationClient\Models\ApiError.cs" />
+    <Compile Include="AutomationClient\Models\ApiResponse.cs" />
+    <Compile Include="AutomationClient\Models\Token.cs" />
     <Compile Include="Parameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestExtensions.cs" />
