--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.ConsoleControls/PurgarNET.AAConnector.Console.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.ConsoleControls/PurgarNET.AAConnector.Console.csproj
@@ -53,9 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PurgarNET.AAConnector.Client\PurgarNET.AAConnector.Client.csproj">
+    <ProjectReference Include="..\PurgarNET.AAConnector.Client\PurgarNET.AAConnector.Shared.csproj">
       <Project>{c023ea8d-d9ec-4a7e-a877-def4b9ed345c}</Project>
-      <Name>PurgarNET.AAConnector.Client</Name>
+      <Name>PurgarNET.AAConnector.Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
