--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/PurgarNET.AAConnector.Console.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/PurgarNET.AAConnector.Console.csproj
@@ -80,6 +80,8 @@
     <Compile Include="Converters\BoolToBrushConverter.cs" />
     <Compile Include="Converters\ObjToBoolConverter.cs" />
     <Compile Include="Converters\RunbookTypeToStringConverter.cs" />
+    <Compile Include="Converters\StringToBoolConverter.cs" />
+    <Compile Include="Converters\StringToVisibilityConverter.cs" />
     <Compile Include="LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
     </Compile>
@@ -96,6 +98,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PropertyDefinition.cs" />
     <Compile Include="RunbookActivityForm.xaml.cs">
       <DependentUpon>RunbookActivityForm.xaml</DependentUpon>
     </Compile>
