--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomationClient\Models\HybridRunbookWorkerGroup.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="AutomationClient\Models\ApiError.cs" />
     <Compile Include="AutomationClient\Models\ApiResponse.cs" />
     <Compile Include="AutomationClient\Models\Token.cs" />
+    <Compile Include="ParameterMapping.cs" />
     <Compile Include="Parameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutomationClient\RestExtensions.cs" />
