--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Workflow/PurgarNET.AAConnector.Workflows.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Workflow/PurgarNET.AAConnector.Workflows.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MonitorJobs.cs">
