--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Parameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutomationClient\RestExtensions.cs" />
+    <Compile Include="PropertyDefinitions.cs" />
     <Compile Include="ServiceManager\Models\ConnectorSettings.cs" />
     <Compile Include="ServiceManager\SMClient.cs" />
     <Compile Include="ServiceManager\SMHelpers.cs" />
