--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Threading, Version=1.0.2856.102, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\TaskParallelLibrary.1.0.2856.0\lib\Net35\System.Threading.dll</HintPath>
       <Private>True</Private>
@@ -61,21 +62,20 @@
     <Compile Include="AutomationClient\Models\HybridRunbookWorkerGroup.cs" />
     <Compile Include="AutomationClient\Models\Job.cs" />
     <Compile Include="AutomationClient\Models\Runbook.cs" />
-    <Compile Include="AutomationClient\AAClientBase.cs" />
-    <Compile Include="AutomationClient\AAUserClient.cs" />
-    <Compile Include="AutomationClient\AAWorkflowClient.cs" />
+    <Compile Include="AutomationClient\AAClient.cs" />
     <Compile Include="AutomationClient\Exceptions.cs" />
     <Compile Include="AutomationClient\Models\ApiError.cs" />
     <Compile Include="AutomationClient\Models\ApiResponse.cs" />
     <Compile Include="AutomationClient\Models\Token.cs" />
+    <Compile Include="HandlerBase.cs" />
     <Compile Include="ParameterMapping.cs" />
     <Compile Include="Parameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutomationClient\RestExtensions.cs" />
     <Compile Include="PropertyDefinitions.cs" />
-    <Compile Include="ServiceManager\Models\ConnectorSettings.cs" />
-    <Compile Include="ServiceManager\SMClient.cs" />
-    <Compile Include="ServiceManager\SMHelpers.cs" />
+    <Compile Include="ConnectorSettings.cs" />
+    <Compile Include="Serializer.cs" />
+    <Compile Include="SMHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
