--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/PurgarNET.AAConnector.Console.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/PurgarNET.AAConnector.Console.csproj
@@ -41,6 +41,9 @@
       <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft System Center 2012 R2\Service Manager\SDK Binaries\Microsoft.EnterpriseManagement.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Microsoft.EnterpriseManagement.ServiceManager.Application.Common">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft System Center 2012 R2\Service Manager\Microsoft.EnterpriseManagement.ServiceManager.Application.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.EnterpriseManagement.ServiceManager.SharedResources">
       <HintPath>..\SDKReferences\Microsoft.EnterpriseManagement.ServiceManager.SharedResources.dll</HintPath>
       <Private>False</Private>
@@ -53,6 +56,9 @@
       <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft System Center 2012 R2\Service Manager\Microsoft.EnterpriseManagement.UI.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Microsoft.EnterpriseManagement.UI.Extensions">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft System Center 2012 R2\Service Manager\Microsoft.EnterpriseManagement.UI.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.EnterpriseManagement.UI.FormsInfra">
       <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft System Center 2012 R2\Service Manager\Microsoft.EnterpriseManagement.UI.FormsInfra.dll</HintPath>
       <Private>False</Private>
@@ -60,6 +66,9 @@
     <Reference Include="Microsoft.EnterpriseManagement.UI.Foundation">
       <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft System Center 2012 R2\Service Manager\Microsoft.EnterpriseManagement.UI.Foundation.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="Microsoft.EnterpriseManagement.UI.SdkDataAccess">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft System Center 2012 R2\Service Manager\Microsoft.EnterpriseManagement.UI.SdkDataAccess.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.EnterpriseManagement.UI.SMControls">
       <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft System Center 2012 R2\Service Manager\Microsoft.EnterpriseManagement.UI.SMControls.dll</HintPath>
@@ -118,6 +127,9 @@
     <Compile Include="SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="StartRunbookTask.cs" />
+    <Compile Include="ViewJobTask.cs" />
+    <Compile Include="ViewRunbookTask.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
