--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
@@ -63,15 +63,23 @@
     <Compile Include="AutomationClient\Models\Job.cs" />
     <Compile Include="AutomationClient\Models\Runbook.cs" />
     <Compile Include="AutomationClient\AAClient.cs" />
-    <Compile Include="AutomationClient\Exceptions.cs" />
-    <Compile Include="AutomationClient\Models\ApiError.cs" />
-    <Compile Include="AutomationClient\Models\ApiResponse.cs" />
-    <Compile Include="AutomationClient\Models\Token.cs" />
+    <Compile Include="Client\Exceptions.cs" />
+    <Compile Include="Client\Models\ApiError.cs" />
+    <Compile Include="Client\Models\ApiResponse.cs" />
+    <Compile Include="AutomationClient\Models\OutputItem.cs" />
+    <Compile Include="Client\Models\Token.cs" />
+    <Compile Include="Client\ClientBase.cs" />
+    <Compile Include="ConfigClient\ConfigClient.cs" />
+    <Compile Include="ConfigClient\GraphClient.cs" />
+    <Compile Include="ConfigClient\Models\Application.cs" />
+    <Compile Include="ConfigClient\Models\PasswordCredential.cs" />
+    <Compile Include="ConfigClient\Models\Subscription.cs" />
+    <Compile Include="ConfigClient\Models\Tenant.cs" />
     <Compile Include="HandlerBase.cs" />
     <Compile Include="ParameterMapping.cs" />
     <Compile Include="Parameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AutomationClient\RestExtensions.cs" />
+    <Compile Include="Client\RestExtensions.cs" />
     <Compile Include="PropertyDefinitions.cs" />
     <Compile Include="ConnectorSettings.cs" />
     <Compile Include="Serializer.cs" />
