--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Shared/PurgarNET.AAConnector.Shared.csproj
@@ -73,11 +73,12 @@
     <Compile Include="Client\ClientBase.cs" />
     <Compile Include="ConfigClient\ConfigClient.cs" />
     <Compile Include="ConfigClient\GraphClient.cs" />
-    <Compile Include="ConfigClient\Models\Application.cs" />
+    <Compile Include="ConfigClient\Models\AdApplication.cs" />
     <Compile Include="ConfigClient\Models\AutomationAccount.cs" />
     <Compile Include="ConfigClient\Models\AutomationAccountInfo.cs" />
     <Compile Include="ConfigClient\Models\PasswordCredential.cs" />
     <Compile Include="ConfigClient\Models\ResourceGroup.cs" />
+    <Compile Include="ConfigClient\Models\ServicePrincipal.cs" />
     <Compile Include="ConfigClient\Models\Subscription.cs" />
     <Compile Include="ConfigClient\Models\Tenant.cs" />
     <Compile Include="HandlerBase.cs" />
